Fix text wrapping in Firefox.
This PR, maybe, fixes #6049. CC: @SuperGeniusZeb.

It is a one line code change, but this change is put into a highly unscoped and generic location, so I would appreciate both lots of testing and sanity checking that there are no adverse side-effects to doing this.

For reference, this is what we're using: https://developer.mozilla.org/en-US/docs/Web/CSS/overflow-wrap
We could also have used https://developer.mozilla.org/en-US/docs/Web/CSS/word-break

--- a/edit-post/assets/stylesheets/main.scss
+++ b/edit-post/assets/stylesheets/main.scss
@@ -45,6 +45,7 @@ html.wp-toolbar {
 
 body.gutenberg-editor-page {
 	background: $white;
+	overflow-wrap: break-word;
 
 	#wpcontent {
 		padding-left: 0;
